ブックマークの追加・削除処理の編集

--- a/ReadQiitaApp_SwiftUI/Resources/en.lproj/label.strings
+++ b/ReadQiitaApp_SwiftUI/Resources/en.lproj/label.strings
@@ -11,3 +11,7 @@
 
 "KeywordSearch" = "キーワード検索";
 "TagSearch" = "タグ検索";
+
+
+"AddBookmark" = "ブックマークに追加しました。";
+"DeleteBookmark" = "ブックマークを削除しました。";
